fix: lane drawer spacing

--- a/src/components/CCIP/ChainHero/ChainHero.css
+++ b/src/components/CCIP/ChainHero/ChainHero.css
@@ -88,5 +88,7 @@
 @media (min-width: 992px) {
   .ccip-hero__content {
     grid-template-columns: 1fr 1fr;
+    padding-left: var(--space-10x);
+    padding-right: var(--space-10x);
   }
 }
