--- a/src/components/CCIP/ChainHero/LaneDetailsHero.css
+++ b/src/components/CCIP/ChainHero/LaneDetailsHero.css
@@ -1,5 +1,6 @@
 .laneDetailsHero {
   padding: var(--space-4x) var(--space-6x);
+  border-bottom: 1px solid var(--gray-200);
 }
 
 .laneDetailsHero h2 {
@@ -40,7 +41,6 @@
 }
 
 .laneDetailsHero__details__label {
-  font-family: "Inter";
   font-style: normal;
   font-weight: 600;
   font-size: 14px;
