--- a/src/components/CCIP/Tables/Table.css
+++ b/src/components/CCIP/Tables/Table.css
@@ -7,10 +7,6 @@
   border: none;
 }
 
-.ccip-table__container {
-  padding: 20px;
-}
-
 .ccip-table__drawer-container {
   padding: var(--space-6x);
 }
@@ -31,6 +27,7 @@
   background-color: transparent;
   padding: 0;
   color: #6c7585;
+  padding-bottom: var(--space-4x);
 }
 
 .ccip-table tbody td {
@@ -121,5 +118,9 @@
 @media screen and (min-width: 768px) {
   .ccip-table__drawer-heading {
     padding: 24px 48px;
+  }
+
+  .ccip-table__drawer-container {
+    padding: var(--space-10x);
   }
 }
